--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -182,13 +182,9 @@ body {
   position: relative;
   max-width: 100vw;
   min-height: 100dvh;
+  max-height: 100dvh;
 }
 
-body > div {
-  display: flex;
-  flex-direction: column;
-  min-height: 100dvh;
-}
 a {
   color: inherit;
   text-decoration: none;
