feat(components/equipment): add Mercenary equipment field

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -305,7 +305,7 @@ a {
       "legs  overview overview overview foots"
       "l_ring_1 overview overview overview r_ring_1"
       "l_ring_2 overview overview overview r_ring_2"
-      ". overview overview overview ."
+      ". overview overview overview mercenary"
       ". overview overview overview ."
       ". overview overview overview .";
     gap: 0.5rem;
